--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 </a>
                             </li>
                                                                                                 <li class="pageTunerWrapper__item">
-                                <a href="https://sssinstagram.com/ar/reels-downloader">
+                                <a href="https://dsifd.vercel.app/reels-downloader">
                                     <img src="images/reels.svg" alt="Reels-downloader" width="18" height="18">
                                     <span>ريلز</span>
                                 </a>
